--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "aws-amplify": "^4.3.14",
     "axios": "^0.24.0",
     "framer-motion": "^5.6.0",
     "json-server": "^0.17.0",
