--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,12 +1,15 @@
 {
   "auth": {
-    "timetrackerclient": {
+    "TimeTrackingApp": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
       "customAuth": false,
       "frontendAuthConfig": {
-        "socialProviders": [],
+        "socialProviders": [
+          "FACEBOOK",
+          "GOOGLE"
+        ],
         "usernameAttributes": [
           "EMAIL"
         ],
