--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -11,6 +12,7 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.23",
     "aws-amplify": "^4.3.14",
     "axios": "^0.24.0",
     "framer-motion": "^5.6.0",
@@ -19,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.2",
     "react-query": "^3.34.8",
+    "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
